# rust_client

./: Cargo.toml  README.md  client.js  entry.js  index.html  package.json  webpack.config.js
src/: app_state.rs  common_funcs.rs  gl_setup.rs  lib.rs
src/programs/: color_2d.rs  color_2d_gradient.rs
src/shaders/fragment/: color_2d.rs  color_2d_gradient.rs
src/shaders/vertex/: color_2d.rs  color_2d_gradient.rs
