[package]
name = "rust_client"
version = "0.1.0"
authors = ["Zerve"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.6"
js-sys = "0.3.35"
lazy_static = "1.4.0"
nalgebra = "0.19.0"
wasm-bindgen = "0.2.58"
cgmath = "0.17.0"
legion = "0.2.1"
gltf = "0.15.0"

[dependencies.web-sys]
version = "0.3.35"
features = [
    'Document',
    'Element',
    'EventTarget',
    'HtmlCanvasElement',
    'MouseEvent',
    'WebGlBuffer',
    'WebGlProgram',
    'WebGlRenderingContext',
    'WebGlShader',
    'WebGlUniformLocation',
    'Window',
]
